--- a/vignettes/Development/Quality control/Microplastic_verification.Rmd
+++ b/vignettes/Development/Quality control/Microplastic_verification.Rmd
@@ -12,14 +12,14 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::knit_meta()
 knitr::opts_chunk$set(
-	eval = FALSE,
-	fig.height = 8,
-	fig.width = 14,
-	include = FALSE
+  eval = FALSE,
+  fig.height = 8,
+  fig.width = 14,
+  include = FALSE
 )
 projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
-knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
-options(dplyr.summarise.inform=FALSE)
+knitr::opts_knit$set(root.dir = projectRoot) # assuming vignette is in a direct subfolder of the project
+options(dplyr.summarise.inform = FALSE)
 knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
@@ -70,111 +70,127 @@ input values.
 # Step 1. Compare SBoo (incl. updates) to spreadsheet
 
 ```{r comparison_1, message=FALSE, include=TRUE, echo=FALSE, warning=FALSE}
-
 library(openxlsx)
 library(tidyverse)
-library (ggplot2)
+library(ggplot2)
 library(plotly)
 
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SBExcel_verification_",substance,".xlsm")
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SBExcel_verification_", substance, ".xlsm")
 
 SBexcel.K <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "K")
+  colNames = FALSE,
+  namedRegion = "K"
+)
 SBexcel.Names <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "box_names")
+  colNames = FALSE,
+  namedRegion = "box_names"
+)
 
 colnames(SBexcel.K) <- SBexcel.Names
 
-SBexcel.K$to <-  as.character(SBexcel.Names)
+SBexcel.K$to <- as.character(SBexcel.Names)
 
-SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
+SBexcel.K <- pivot_longer(SBexcel.K, cols = as.character(SBexcel.Names), values_to = "k", names_to = "from")
 
-#adding "from" and "to" acronyms to the R K matrix
+# adding "from" and "to" acronyms to the R K matrix
 kaas <- as_tibble(World$kaas)
 
-#R version does not us the acronyms of the excel version, set-up to convert them
-#Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
-accronym_map <- c("marinesediment" = "sd2",
-                "freshwatersediment" = "sd1",
-                "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
-                "agriculturalsoil" = "s2",
-                "naturalsoil" = "s1",
-                "othersoil" = "s3",
-                "air" = "a",
-                "deepocean" = "w3",
-                "sea" = "w2",
-                "river" = "w1",
-                "lake" = "w0", 
-                "cloudwater" = "cw")
+# R version does not us the acronyms of the excel version, set-up to convert them
+# Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
+accronym_map <- c(
+  "marinesediment" = "sd2",
+  "freshwatersediment" = "sd1",
+  "lakesediment" = "sd0", # SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
+  "agriculturalsoil" = "s2",
+  "naturalsoil" = "s1",
+  "othersoil" = "s3",
+  "air" = "a",
+  "deepocean" = "w3",
+  "sea" = "w2",
+  "river" = "w1",
+  "lake" = "w0",
+  "cloudwater" = "cw"
+)
 
-accronym_map2 <- c("Arctic" = "A",
-                   "Moderate" = "M",
-                   "Tropic" = "T",
-                   "Continental" = "C",
-                   "Regional" = "R")
+accronym_map2 <- c(
+  "Arctic" = "A",
+  "Moderate" = "M",
+  "Tropic" = "T",
+  "Continental" = "C",
+  "Regional" = "R"
+)
 
-accronym_map3 <- c("Dissolved" = "D", 
-                   "Gas" = "G", 
-                   "Large" = "P", 
-                   "Small" = "A",
-                   "Solid" = "S", 
-                   "Unbound" = "U")
+accronym_map3 <- c(
+  "Dissolved" = "D",
+  "Gas" = "G",
+  "Large" = "P",
+  "Small" = "A",
+  "Solid" = "S",
+  "Unbound" = "U"
+)
 
 # kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
 
-kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
-                            accronym_map2[fromScale], 
-                            accronym_map3[fromSpecies]),
-               to = paste0(accronym_map[toSubCompart], 
-                           accronym_map2[toScale], 
-                           accronym_map3[toSpecies]))
+kaas <- kaas |> mutate(
+  from = paste0(
+    accronym_map[fromSubCompart],
+    accronym_map2[fromScale],
+    accronym_map3[fromSpecies]
+  ),
+  to = paste0(
+    accronym_map[toSubCompart],
+    accronym_map2[toScale],
+    accronym_map3[toSpecies]
+  )
+)
 
 kaas <-
   kaas |>
-  mutate(from =
-                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
-                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
-                          str_replace_all(from, c("sd2"="sd","s1"="s")),
-                          from)) |>
+  mutate(
+    from =
+      ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
+        (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
+      str_replace_all(from, c("sd2" = "sd", "s1" = "s")),
+      from
+      )
+  ) |>
   mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") &
-                       (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
+    (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2" = "sd", "s1" = "s")), to))
 
-kaas2 <- kaas |>  
-  filter(from != to) |> #filtering the diagonals ou
-  group_by(from, to) %>% summarize(k = sum(k)) #R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
+kaas2 <- kaas |>
+  filter(from != to) |> # filtering the diagonals ou
+  group_by(from, to) %>%
+  summarize(k = sum(k)) # R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
 
 kaas2$fromto <- paste(sep = "_", kaas2$from, kaas2$to)
 
-diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
+diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to, ] # all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
-#filter out dissolved and gas processes
+# filter out dissolved and gas processes
 filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
 filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
 
 # R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
-diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
+diagonal_R <- aggregate(k ~ from, data = kaas, FUN = sum)
 
 # filter out molecular (unbound) state
 filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
-      
-#Single dataframe with both the R and excel diagonals
-merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel")) 
-merged_diagonal$k_Excel <- -merged_diagonal$k_Excel #Turning the "negative" values from the Excel matrix into positive ones
-merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel 
+
+# Single dataframe with both the R and excel diagonals
+merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel"))
+merged_diagonal$k_Excel <- -merged_diagonal$k_Excel # Turning the "negative" values from the Excel matrix into positive ones
+merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel
 sorted_diff <- merged_diagonal[order(abs(merged_diagonal$diff), decreasing = TRUE), ] |>
-  mutate(reldif  = abs(diff/k_R))
+  mutate(reldif = abs(diff / k_R))
 
 SBexcel.K <- filter(SBexcel.K, k != 0 & SBexcel.K$from != SBexcel.K$to)
 SBexcel.K$fromto <- paste(sep = "_", SBexcel.K$from, SBexcel.K$to)
 
 mergedkaas <- merge(kaas2, SBexcel.K, by = c("from", "to"), suffixes = c("_R", "_Excel"))
 
-mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
+mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel # compare R k to Excel K
 
-mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
-
+mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff / k_R)
 ```
 
 ## preliminary matrix check
@@ -219,20 +235,19 @@ world_processes <- unique(World$kaas$process)
 if (!setequal(Functions, world_processes)) {
   # Find elements in world_processes not in Functions
   missing_from_functions <- world_processes[!world_processes %in% Functions]
-  
+
   # Find elements in Functions not in world_processes
   extra_in_functions <- Functions[!Functions %in% world_processes]
-  
+
   # Print the mismatched elements
   cat("The following process names are missing from Functions:\n")
   print(missing_from_functions)
   cat("The following process names are extra in Functions:\n")
   print(extra_in_functions)
-  
+
   # Stop the script
   stop("Mismatch found between Functions and unique(World$kaas$process).")
 }
-
 ```
 
 ## Compare first order rate constants
@@ -259,13 +274,13 @@ sum of the removal process k's (i.e. degradation or burial).
 custom_theme <- function() {
   theme(
     axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
-    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)#,
-    #panel.background = element_rect(fill = "white", colour = "grey"),   # White background
-    #panel.grid.major = element_line(colour = "grey")#,                   # Black major grid lines
-    #panel.grid.minor = element_line(colour = "black")                    # Black minor grid lines
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8),
+    plot.margin = margin(t = 10, r = 10, b = 30, l = 10) # ,
+    # panel.background = element_rect(fill = "white", colour = "grey"),   # White background
+    # panel.grid.major = element_line(colour = "grey")#,                   # Black major grid lines
+    # panel.grid.minor = element_line(colour = "black")                    # Black minor grid lines
   )
-} 
+}
 
 # Plot of differences of the diagonals per compartment
 # ggplot(sorted_diff, aes(x = from, y = diff)) +
@@ -282,33 +297,31 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
   ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
+  custom_theme() +
   labs(x = "from-Subcompartment Code", y = "Relative diff")
-
-
 ```
 
 ### From-to k's
 
 ```{r PlotFromTok_1, echo=FALSE, warning=FALSE, fig.cap="Figure 2: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 # "To" and "from" in one plot
-# ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
+# ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) +
 #   geom_point() +
 #   scale_color_gradient(low = "green", high = "red", trans = "log10") +
 #   ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
 #   theme(
 #     axis.text.y = element_text(hjust = 1, size = 8),
-#     axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
+#     axis.text.x = element_text(angle = 90, hjust = 1, size = 8),
 #     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
 #   )
 
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   geom_point() +
   scale_color_gradient(low = "green", high = "red") +
   ggtitle(paste0(substance)) +
   theme(
     axis.text.y = element_text(size = 8),
-    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8),
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
 ```
@@ -329,27 +342,29 @@ We can filter out the exact k's that have a relative difference larger than 0.1%
 mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.001) |>
-  arrange(desc(relDif)) |> knitr::kable(digits = 30)
+  arrange(desc(relDif)) |>
+  knitr::kable(digits = 30)
 ```
 
 ### Steadystate mass
 ```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 library(stringi)
 World$NewSolver("SteadyStateSolver")
-emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
+emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
 emissions <- emissions |>
-  mutate(Emis = Emis*1000/(365*24*60*60))
+  mutate(Emis = Emis * 1000 / (365 * 24 * 60 * 60))
 
 World$Solve(emissions)
 SSsolve.R <- World$Masses()
 SSsolve.excel <- read.xlsx(SBExcelName,
-                             sheet=8,
-                             colNames=TRUE,
-                             rows=c(167,169))
+  sheet = 8,
+  colNames = TRUE,
+  rows = c(167, 169)
+)
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything())  |>
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
   mutate(Species = case_when(
     substr(Abbr, nchar(Abbr), nchar(Abbr)) == "G" ~ "Gas",
     substr(Abbr, nchar(Abbr), nchar(Abbr)) == "D" ~ "Dissolved",
@@ -363,30 +378,32 @@ SSsolve.excel <- SSsolve.excel |>
   mutate(Abbr = str_sub(Abbr, 1, -2)) |>
   rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> 
+SSsolve.R <- SSsolve.R |>
   left_join(World$states$asDataFrame, by = "Abbr") |>
-  mutate(Abbr =  paste0(accronym_map[SubCompart], 
-                            accronym_map2[Scale])) |>
+  mutate(Abbr = paste0(
+    accronym_map[SubCompart],
+    accronym_map2[Scale]
+  )) |>
   filter(Mass_kg != 0)
 
-merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by=c("Abbr", "Species"), suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
-  mutate(reldiff = absdiff/Mass_kg.R) |>
+merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by = c("Abbr", "Species"), suffixes = c(".R", ".Excel")) |>
+  mutate(absdiff = Mass_kg.R - Mass_kg.Excel) |>
+  mutate(reldiff = absdiff / Mass_kg.R) |>
   mutate(Abbr = case_when(
-    Species == "Large" ~ paste0(Abbr,"P"),
-    Species == "Small" ~ paste0(Abbr,"A"),
-    Species == "Solid" ~ paste0(Abbr,"S"),
+    Species == "Large" ~ paste0(Abbr, "P"),
+    Species == "Small" ~ paste0(Abbr, "A"),
+    Species == "Solid" ~ paste0(Abbr, "S"),
     TRUE ~ "Other"
   ))
 
-#Diff per "to" compartment
-ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
+# Diff per "to" compartment
+ggplot(merged_SS_SB1, aes(x = Abbr, y = reldiff)) +
   geom_boxplot() +
   ggtitle(paste0(substance)) +
-  geom_hline(yintercept = 0.001, color="red") +
-  geom_hline(yintercept = -0.001, color="red") +
-  custom_theme() + 
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) 
+  geom_hline(yintercept = 0.001, color = "red") +
+  geom_hline(yintercept = -0.001, color = "red") +
+  custom_theme() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 ```
 
 The differences in k's drives the model output: the steady state mass. So a final check is to see how much the steady state masses differ between both implementations of SimpleBox (Figure 3). From this it is clear that there  are differences up to `r merged_SS_SB1$reldiff |> max() |> round(digits=3)*100`%. This is larger than the level we can consider negligible.
@@ -399,112 +416,132 @@ difference in k's and steady state masses is shown again in relation to the inte
 World$SetConst(Test = "TRUE")
 World$UpdateKaas(mergeExisting = FALSE)
 
-ProcessNanoFunctions <- c("k_Advection", "k_Burial",
-                         "k_HeteroAgglomeration.a", "k_HeteroAgglomeration.wsd",
-                         "k_CWscavenging", "k_Degradation",
-                         "k_DryDeposition", "k_Erosion", "k_Escape",
-                         "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation",
-                        "k_WetDeposition")
+ProcessNanoFunctions <- c(
+  "k_Advection", "k_Burial",
+  "k_HeteroAgglomeration.a", "k_HeteroAgglomeration.wsd",
+  "k_CWscavenging", "k_Degradation",
+  "k_DryDeposition", "k_Erosion", "k_Escape",
+  "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation",
+  "k_WetDeposition"
+)
 
 
 
 SBexcel.K <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "K")
+  colNames = FALSE,
+  namedRegion = "K"
+)
 SBexcel.Names <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "box_names")
+  colNames = FALSE,
+  namedRegion = "box_names"
+)
 
 colnames(SBexcel.K) <- SBexcel.Names
 
-SBexcel.K$to <-  as.character(SBexcel.Names)
+SBexcel.K$to <- as.character(SBexcel.Names)
 
-SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
+SBexcel.K <- pivot_longer(SBexcel.K, cols = as.character(SBexcel.Names), values_to = "k", names_to = "from")
 
-#adding "from" and "to" acronyms to the R K matrix
+# adding "from" and "to" acronyms to the R K matrix
 kaas <- as_tibble(World$kaas)
 
-#R version does not us the acronyms of the excel version, set-up to convert them
-#Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
-accronym_map <- c("marinesediment" = "sd2",
-                "freshwatersediment" = "sd1",
-                "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
-                "agriculturalsoil" = "s2",
-                "naturalsoil" = "s1",
-                "othersoil" = "s3",
-                "air" = "a",
-                "deepocean" = "w3",
-                "sea" = "w2",
-                "river" = "w1",
-                "lake" = "w0", 
-                "cloudwater" = "cw")
+# R version does not us the acronyms of the excel version, set-up to convert them
+# Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
+accronym_map <- c(
+  "marinesediment" = "sd2",
+  "freshwatersediment" = "sd1",
+  "lakesediment" = "sd0", # SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
+  "agriculturalsoil" = "s2",
+  "naturalsoil" = "s1",
+  "othersoil" = "s3",
+  "air" = "a",
+  "deepocean" = "w3",
+  "sea" = "w2",
+  "river" = "w1",
+  "lake" = "w0",
+  "cloudwater" = "cw"
+)
 
-accronym_map2 <- c("Arctic" = "A",
-                   "Moderate" = "M",
-                   "Tropic" = "T",
-                   "Continental" = "C",
-                   "Regional" = "R")
+accronym_map2 <- c(
+  "Arctic" = "A",
+  "Moderate" = "M",
+  "Tropic" = "T",
+  "Continental" = "C",
+  "Regional" = "R"
+)
 
-accronym_map3 <- c("Dissolved" = "D", 
-                   "Gas" = "G", 
-                   "Large" = "P", 
-                   "Small" = "A",
-                   "Solid" = "S", 
-                   "Unbound" = "U")
+accronym_map3 <- c(
+  "Dissolved" = "D",
+  "Gas" = "G",
+  "Large" = "P",
+  "Small" = "A",
+  "Solid" = "S",
+  "Unbound" = "U"
+)
 
 # kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
 
-kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
-                            accronym_map2[fromScale], 
-                            accronym_map3[fromSpecies]),
-               to = paste0(accronym_map[toSubCompart], 
-                           accronym_map2[toScale], 
-                           accronym_map3[toSpecies]))
+kaas <- kaas |> mutate(
+  from = paste0(
+    accronym_map[fromSubCompart],
+    accronym_map2[fromScale],
+    accronym_map3[fromSpecies]
+  ),
+  to = paste0(
+    accronym_map[toSubCompart],
+    accronym_map2[toScale],
+    accronym_map3[toSpecies]
+  )
+)
 
 kaas <-
   kaas |>
-  mutate(from =
-                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
-                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
-                          str_replace_all(from, c("sd2"="sd","s1"="s")),
-                          from)) |>
+  mutate(
+    from =
+      ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
+        (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
+      str_replace_all(from, c("sd2" = "sd", "s1" = "s")),
+      from
+      )
+  ) |>
   mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") &
-                       (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
+    (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2" = "sd", "s1" = "s")), to))
 
-kaas2 <- kaas |>  
-  filter(from != to) |> #filtering the diagonals ou
-  group_by(from, to) %>% summarize(k = sum(k)) #R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
+kaas2 <- kaas |>
+  filter(from != to) |> # filtering the diagonals ou
+  group_by(from, to) %>%
+  summarize(k = sum(k)) # R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
 
 kaas2$fromto <- paste(sep = "_", kaas2$from, kaas2$to)
 
-diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
+diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to, ] # all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
-#filter out dissolved and gas processes
+# filter out dissolved and gas processes
 
 filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
 filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
 
-#filter out molecular (unbound) state
-#R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
+# filter out molecular (unbound) state
+# R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
 
-diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
+diagonal_R <- aggregate(k ~ from, data = kaas, FUN = sum)
 filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
 
-#Single dataframe with both the R and excel diagonals
-merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel")) 
-merged_diagonal$k_Excel <- -merged_diagonal$k_Excel #Turning the "negative" values from the Excel matrix into positive ones
-merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel 
+# Single dataframe with both the R and excel diagonals
+merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel"))
+merged_diagonal$k_Excel <- -merged_diagonal$k_Excel # Turning the "negative" values from the Excel matrix into positive ones
+merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel
 sorted_diff <- merged_diagonal[order(abs(merged_diagonal$diff), decreasing = TRUE), ] |>
-  mutate(reldif  = abs(diff/k_R))
+  mutate(reldif = abs(diff / k_R))
 
 SBexcel.K <- filter(SBexcel.K, k != 0 & SBexcel.K$from != SBexcel.K$to)
 SBexcel.K$fromto <- paste(sep = "_", SBexcel.K$from, SBexcel.K$to)
 
 mergedkaas <- merge(kaas2, SBexcel.K, by = c("from", "to"), suffixes = c("_R", "_Excel"))
 
-mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
+mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel # compare R k to Excel K
 
-mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
+mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff / k_R)
 ```
 
 ## Compare first order rate constants
@@ -516,20 +553,19 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
   ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
+  custom_theme() +
   labs(x = "from", y = "Relative diff")
-
 ```
 
 
 ```{r PlotFromTok_2, echo=FALSE, warning=FALSE, message=FALSE, fig.cap="Figure 5: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   geom_point() +
   scale_color_gradient(low = "green", high = "red", limits = c(0, 0.001)) +
   ggtitle(paste0(substance)) +
   theme(
     axis.text.y = element_text(size = 8),
-    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8),
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
 ```
@@ -544,29 +580,30 @@ Erosion from soil to water
 mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.0001) |>
-  arrange(desc(relDif)) |> knitr::kable(digits = 30)
+  arrange(desc(relDif)) |>
+  knitr::kable(digits = 30)
 ```
 
 
 ## Steadystate mass
 ```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
-
 library(stringi)
 World$NewSolver("SteadyStateSolver")
-emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
+emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
 emissions <- emissions |>
-  mutate(Emis = Emis*1000/(365*24*60*60))
+  mutate(Emis = Emis * 1000 / (365 * 24 * 60 * 60))
 
 World$Solve(emissions)
 SSsolve.R <- World$Masses()
 SSsolve.excel <- read.xlsx(SBExcelName,
-                             sheet=8,
-                             colNames=TRUE,
-                             rows=c(167,169))
+  sheet = 8,
+  colNames = TRUE,
+  rows = c(167, 169)
+)
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything())  |>
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) |>
   mutate(Species = case_when(
     substr(Abbr, nchar(Abbr), nchar(Abbr)) == "G" ~ "Gas",
     substr(Abbr, nchar(Abbr), nchar(Abbr)) == "D" ~ "Dissolved",
@@ -580,30 +617,32 @@ SSsolve.excel <- SSsolve.excel |>
   mutate(Abbr = str_sub(Abbr, 1, -2)) |>
   rename(Mass_kg = EqMass)
 
-SSsolve.R <- SSsolve.R |> 
+SSsolve.R <- SSsolve.R |>
   left_join(World$states$asDataFrame, by = "Abbr") |>
-  mutate(Abbr =  paste0(accronym_map[SubCompart], 
-                            accronym_map2[Scale])) |>
+  mutate(Abbr = paste0(
+    accronym_map[SubCompart],
+    accronym_map2[Scale]
+  )) |>
   filter(Mass_kg != 0)
 
-merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by=c("Abbr", "Species"), suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = Mass_kg.R-Mass_kg.Excel) |>
-  mutate(reldiff = absdiff/Mass_kg.R) |>
+merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by = c("Abbr", "Species"), suffixes = c(".R", ".Excel")) |>
+  mutate(absdiff = Mass_kg.R - Mass_kg.Excel) |>
+  mutate(reldiff = absdiff / Mass_kg.R) |>
   mutate(Abbr = case_when(
-    Species == "Large" ~ paste0(Abbr,"P"),
-    Species == "Small" ~ paste0(Abbr,"A"),
-    Species == "Solid" ~ paste0(Abbr,"S"),
+    Species == "Large" ~ paste0(Abbr, "P"),
+    Species == "Small" ~ paste0(Abbr, "A"),
+    Species == "Solid" ~ paste0(Abbr, "S"),
     TRUE ~ "Other"
   ))
 
-#Diff per "to" compartment
-ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
+# Diff per "to" compartment
+ggplot(merged_SS_SB1, aes(x = Abbr, y = reldiff)) +
   geom_boxplot() +
   ggtitle(paste0(substance)) +
-  geom_hline(yintercept = 0.001, color="red") +
-  geom_hline(yintercept = -0.001, color="red") +
-  custom_theme() + 
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) 
+  geom_hline(yintercept = 0.001, color = "red") +
+  geom_hline(yintercept = -0.001, color = "red") +
+  custom_theme() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 ```
 
 To test if the small differences (<0.1%) in first order rate constants is negligible (Figures 4 and 5), the steady state masses should also not differ by more than 0.1% between the R and Spreadsheet implementations of SimpleBox. This is indeed the case (Figure 6) as the max difference in now only `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=4)*100`%. This proves that the port of SimpleBox4Plastics to R is successful in reproducing the results from the original spreadsheet implementation.
