--- a/vignettes/Development/Readme.Rmd
+++ b/vignettes/Development/Readme.Rmd
@@ -1,20 +1,15 @@
 ---
-title: "Development readme"
-author: "Jaap Slootweg, Joris Quik, Valerie de Rijk"
+title: "Development of SimpleBox object oriented (SBoo)"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
   chunk_output_type: console
 ---
 
-# Development of SimpleBox object oriented (SBoo)
-
 There are several important conventions taken as basis for development of SimpleBox in R.
 This folder contains different examples[^1] and other help files aimed at an (advanced) user who wants to extend or modify the current implementation of SBoo.
 
-## SBoo
-
-Important starting documents to read:
+## Important starting documents to read:
 
 -   [Getting-Started](/vignettes/Getting-started.md) : Although not in this folder, before starting to develop it's wise to understand how SB will be used by most users. In this vignette a default calculation is explained.
 -   [Basics for developers](/vignettes/Development/BasicsOfDevelopment.md) : This vignette is a good starting point for starting developers. The underlying structure of the repository is explained here, including the input data.
